# AndroidDriverTest

./: README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/andrivertest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LoadScanPrnDeviceLibrary.h  ScanPrnDeviceDll.h  byScanPrnDeviceDll.h  com_example_andrivertest_BCRInterface.h  com_example_andrivertest_PrinterInterface.h  native-hscanner.cpp  native-hscanner.h  native-printer.cpp
app/src/main/java/com/example/andrivertest/: BCRFragment.java  BCRInterface.java  DrivertestScript.java  HscannerSript.java  MainActivity.java  MainFragment.java  PagerAdapter.java  PrinterInterface.java  PrinterScript.java
app/src/main/res/drawable/: edittext_border.xml
app/src/main/res/layout/: activity_main.xml  bcr_fragment.xml  main_fragment.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/example/andrivertest/: ExampleUnitTest.java
